--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ footer {
         
         <h2>3o|||sheet Runtime</h2>
         <p>Register-based Virtual Machine running safely in a sandbox. Works on devices with only <strong>8 KB RAM</strong> and full peripheral access.</p>
-        <ul  style="padding-left: 20px; margin-left: 0;>
+        <ul  style="padding-left: 20px; margin-left: 0;">
             <li>Low-memory devices (~8 KB RAM)</li>
             <li>Safe sandboxed execution</li>
             <li>Controls GPIO, timers, UART, I²C, SPI, etc.</li>
