--- a/index.html
+++ b/index.html
@@ -138,10 +138,11 @@ footer {
 
 <div class="feature">
     <h2>3o|||sheet IDE</h2>
+    <p  style="padding-left: 20px; margin-left: 0;">
     <p>A lightweight, cross-platform IDE built on <strong>OpenJDK</strong>. Runs on single-board computers with minimal resources.</p>
     <p>Supports <strong>LD</strong>, <strong>FBD</strong>, and <strong>ST</strong> languages plus a <strong>virtual machine instruction set</strong> for advanced logic design.</p>
     <p>Offers extensive debugging capabilities: developers can modify code in real-time without physically restarting the PLC.</p>
-    
+</p>
     The development environment can create executable programs for the PLC in <strong>two modes:</strong>
     <ul style="padding-left: 20px; margin-left: 0;">
         <li><strong style="color: blue;">Classic PLC mode</strong> — cyclic model (OB, OB100). An optimized, economical mode that contains a minimum of additional programs.</li>
