--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@ footer {
             <source src="3osheetRes.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+        <video controls autoplay muted loop>
+            <source src="fbdedit.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
     </div>
 
     <div class="feature">
