--- a/index.html
+++ b/index.html
@@ -212,6 +212,36 @@ footer {
         <img src="virtualmemorymap.png" alt="Memory Map">
     </div>
 
+
+
+
+
+     <div class="feature">
+        <h2>Multi-VM Architecture:</h2>
+        <div class="text-content">
+            <p>Execute multiple, hardware-isolated runtime environments on a single MCU. Ensures fault containment and enables functional safety.</p>
+        </div>
+        <img src="multitask.png" alt="Memory Map">
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+
     <div class="table-container">
         <h2>LD Instruction Execution Times</h2>
         <div class="text-content">
