--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ footer {
     <div class="feature">
 
         <video controls autoplay muted loop>
-            <source src="fbdedit.mp4" type="video/mp4">
+            <source src="3osheet_ide.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
