--- a/index.html
+++ b/index.html
@@ -262,6 +262,11 @@ footer {
                     <td>5.5 μs</td>
                 </tr>
                 <tr>
+                    <td>STM32F103 72Mhz (<span class="blue-text">3o|||sheet Runtime</span>)</td>
+                    <td>4.9 μs</td>
+                    <td>13.6 μs</td>
+                </tr>
+                <tr>
                     <td>STM32F407 168Mhz (<span class="blue-text">3o|||sheet Runtime</span>)</td>
                     <td>2.4 μs</td>
                     <td>4.5 μs</td>
