--- a/index.html
+++ b/index.html
@@ -271,6 +271,13 @@ footer {
                     <td>1.8 μs</td>
                     <td>3.5 μs</td>
                 </tr>
+
+
+                <tr>
+                    <td>Rockwell Micro810</td>
+                    <td>2.5 μs</td>
+                    <td>8.6 μs</td>
+                </tr>
    
                 <tr>
                     <td>Rockwell Compact GuardLogix 5380 1Ghz</td>
