--- a/index.html
+++ b/index.html
@@ -267,6 +267,11 @@ footer {
                     <td>13.6 μs</td>
                 </tr>
                 <tr>
+                    <td>CH32V203 (72Mhz Mode) (<span class="blue-text">3o|||sheet Runtime</span>)</td>
+                    <td>4.5 μs</td>
+                    <td>9.0 μs</td>
+                </tr>
+                <tr>
                     <td>STM32F407 168Mhz (<span class="blue-text">3o|||sheet Runtime</span>)</td>
                     <td>1.8 μs</td>
                     <td>3.5 μs</td>
