--- a/index.html
+++ b/index.html
@@ -318,23 +318,28 @@ footer {
             <tbody>
                 <tr>
                     <td>CH32V307 144Mhz (<span class="blue-text">3o|||sheet Runtime</span>)</td>
-                    <td>1 μs</td>
-                    <td>5.5 μs</td>
+                    <td>0.8 μs</td>
+                    <td>2.5 μs</td>
+                </tr>
+                <tr>
+                    <td>STM32G030 64Mhz (<span class="blue-text">3o|||sheet Runtime</span>)</td>
+                    <td>2.1 μs</td>
+                    <td>6.5 μs</td>
                 </tr>
                 <tr>
                     <td>STM32F103 72Mhz (<span class="blue-text">3o|||sheet Runtime</span>)</td>
-                    <td>4.9 μs</td>
-                    <td>13.6 μs</td>
+                    <td>2.3 μs</td>
+                    <td>4.6 μs</td>
                 </tr>
                 <tr>
                     <td>CH32V203 (72Mhz Mode) (<span class="blue-text">3o|||sheet Runtime</span>)</td>
-                    <td>4.5 μs</td>
-                    <td>9.0 μs</td>
+                    <td>0.8 μs</td>
+                    <td>3.1 μs</td>
                 </tr>
                 <tr>
                     <td>STM32F407 168Mhz (<span class="blue-text">3o|||sheet Runtime</span>)</td>
-                    <td>1.8 μs</td>
-                    <td>3.5 μs</td>
+                    <td>1.2 μs</td>
+                    <td>2.8 μs</td>
                 </tr>
                 <tr>
                     <td>Rockwell Micro810</td>
