--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ footer {
     <div class="table-container">
         <h2>LD Instruction Execution Times</h2>
         <div class="text-content">
-            <p>Measured execution times for boolean and floating-point operations on different microcontrollers and PLCs.</p>
+            <p>Measured execution times for boolean and INT/floating-point operations on different microcontrollers and PLCs.</p>
         </div>
         <table id="speed-test">
             <thead>
@@ -320,33 +320,33 @@ footer {
                 <tr>
                     <td>STM32G030 64Mhz (<span class="blue-text">3o|||sheet Runtime</span>)</td>
                     <td>2.1 μs</td>
-                    <td>6.5 μs</td>
+                    <td>6.5/24 μs</td>
                 </tr>
                 <tr>
                     <td>STM32F103 72Mhz (<span class="blue-text">3o|||sheet Runtime</span>)</td>
                     <td>1.9 μs</td>
-                    <td>4.6 μs</td>
+                    <td>4.6/4.6 μs</td>
                 </tr>
                 <tr>
                     <td>STM32F407 168Mhz (<span class="blue-text">3o|||sheet Runtime</span>)</td>
                     <td>1.2 μs</td>
-                    <td>2.8 μs</td>
+                    <td>2.8/2.8 μs</td>
                 </tr>
                 <tr>
                     <td>CH32V203 (144Mhz Mode) (<span class="blue-text">3o|||sheet Runtime</span>)</td>
                     <td>0.8 μs</td>
-                    <td>3.1 μs</td>
+                    <td>3.1/18.3 μs</td>
                 </tr>
                 <tr>
                     <td>CH32V307 144Mhz (<span class="blue-text">3o|||sheet Runtime</span>)</td>
                     <td>0.8 μs</td>
-                    <td>2.5 μs</td>
+                    <td>5.5/5.5 μs</td>
                 </tr>
 
                 <tr>
                     <td>Rockwell Micro810</td>
                     <td>2.5 μs</td>
-                    <td>8.6 μs</td>
+                    <td>8.6/ - μs</td>
                 </tr>
                 <tr>
                     <td>Rockwell Compact GuardLogix 5380 1Ghz</td>
@@ -356,7 +356,7 @@ footer {
                 <tr>
                     <td>Siemens S7-1200</td>
                     <td>~0.08ns</td>
-                    <td>~2.3μs</td>
+                    <td>~2.3μs/ 4</td>
                 </tr>
             </tbody>
         </table>
