--- a/index.html
+++ b/index.html
@@ -305,14 +305,14 @@ footer {
     <div class="table-container">
         <h2>LD Instruction Execution Times</h2>
         <div class="text-content">
-            <p>Measured execution times for boolean and INT/floating-point operations on different microcontrollers and PLCs.</p>
+            <p>Measured execution times for boolean and Iteger and floating-point operations on different microcontrollers and PLCs.</p>
         </div>
         <table id="speed-test">
             <thead>
                 <tr>
                     <th>Device</th>
                     <th>Boolean Operation</th>
-                    <th>Floating-Point Operation</th>
+                    <th>Iteger / Floating-Point Operation</th>
                 </tr>
             </thead>
             <tbody>
